---
source: crates/cli/tests/run_node_test.rs
assertion_line: 240
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ npm install
▪▪▪▪ node:runFromWorkspace
<WORKSPACE>
▪▪▪▪ node:runFromWorkspace (100ms)

Tasks: 1 completed
 Time: 100ms



